[FUNC-2] Añadidas más aserciones en testFindCourses [VARIOS] Añadido MIN_ID